implement skipping of already commented functions

--- a/testNotebook.ipynb
+++ b/testNotebook.ipynb
@@ -163,6 +163,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "def commentedFunction(param):\n",
+    "    \"\"\" This function already has a complete docstring, so no need to add a new one!\n",
+    "\n",
+    "    :param param: a generic parameter\n",
+    "    :type param: int\n",
+    "    :return: nothing\n",
+    "    :rtype: None\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "\n",
+    "def uncommentedFunction(param):\n",
+    "    pass"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
