--- a/testNotebook_documented.ipynb
+++ b/testNotebook_documented.ipynb
@@ -170,6 +170,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "def commentedFunction(param):\n",
+    "",
+    "    \"\"\" This function already has a complete docstring, so no need to add a new one!\n",
+    "\n",
+    "    :param param: a generic parameter\n",
+    "    :type param: int\n",
+    "    :return: nothing\n",
+    "    :rtype: None\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "\n",
+    "def uncommentedFunction(param):\n",
+    "# TODO: Fill out auto-generated docstring\n    \"\"\" Description of what function uncommentedFunction does. Can be multiline.\n    :param param: Parameter description for param\n    :type param: Type of param\n    :returns: What does the function return?\n    :rtype: Type of the return value\n    \"\"\"\n",
+    "    pass"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
