add test actually converting a whole jupyter notebook

--- a/tests/testdata/testNotebook.ipynb
+++ b/tests/testdata/testNotebook.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "  # def commentedFunction():\n",
     "def uncommentedFunction(parameter1, parameter2): # def commentedFunction(param1, param2):\n",
-    "    print('Thie was an uncommented function!')\n",
+    "    print('This was an uncommented function!')\n",
     "\n",
     "def secondFunction(onlyOneParameter):\n",
     "    print('Ping')"
