--- a/tests/testdata/testNotebook_documented.ipynb
+++ b/tests/testdata/testNotebook_documented.ipynb
@@ -95,7 +95,7 @@
     "  # def commentedFunction():\n",
     "def uncommentedFunction(parameter1, parameter2): # def commentedFunction(param1, param2):\n",
     "# TODO: Fill out auto-generated docstring\n    \"\"\" Description of what function uncommentedFunction does. Can be multiline.\n    :param parameter1: Parameter description for parameter1\n    :type parameter1: Type of parameter1\n    :param parameter2: Parameter description for parameter2\n    :type parameter2: Type of parameter2\n    :returns: What does the function return?\n    :rtype: Type of the return value\n    \"\"\"\n",
-    "    print('Thie was an uncommented function!')\n",
+    "    print('This was an uncommented function!')\n",
     "\n",
     "def secondFunction(onlyOneParameter):\n",
     "# TODO: Fill out auto-generated docstring\n    \"\"\" Description of what function secondFunction does. Can be multiline.\n    :param onlyOneParameter: Parameter description for onlyOneParameter\n    :type onlyOneParameter: Type of onlyOneParameter\n    :returns: What does the function return?\n    :rtype: Type of the return value\n    \"\"\"\n",
